# src/main/resources/swagger/stocky-service.yml
@@ -35,18 +35,29 @@ paths:
         type: integer
         required: false
         minimum: 1
+        maximum: 100
         default: 10
       responses:
         '200':
           description: Successful response with pagination.
           schema:
-            $ref: '#/definitions/StockListResponseDTO'
+            $ref: '#/definitions/StockListResponse'
         '401':
-          description: You user is not Authorized
+          description: Your user is not Authorized.
+          schema:
+            $ref: '#/definitions/ErrorResponse'
         '403':
-          description: You don't have the permission on this resource
+          description: You don't have the permission on this resource.
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+        '404':
+          description: Requested page is out of bounds.
+          schema:
+            $ref: '#/definitions/ErrorResponse'
         '500':
-          description: Internal Server Error
+          description: Internal Server Error.
+          schema:
+            $ref: '#/definitions/ErrorResponse'
 
     post:
       tags:
@@ -62,18 +73,26 @@ paths:
         schema:
           $ref: '#/definitions/CreateStockRequestDTO'
       responses:
-        '200':
+        '201':
           description: Stock Created Successfully
           schema:
-            $ref: '#/definitions/StockDTO'
+            $ref: '#/definitions/StockDetailResponse'
         '400':
-          description: Request is not correct
+          description: Incorrect/Corrupt request.
+          schema:
+            $ref: '#/definitions/ErrorResponse'
         '401':
-          description: You user is not Authorized
+          description: Your user is not Authorized.
+          schema:
+            $ref: '#/definitions/ErrorResponse'
         '403':
-          description: You don't have the permission on this resource
+          description: You don't have the permission on this resource.
+          schema:
+            $ref: '#/definitions/ErrorResponse'
         '500':
-          description: Internal Server Error
+          description: Internal Server Error.
+          schema:
+            $ref: '#/definitions/ErrorResponse'
 
   '/api/stocks/{stockId}':
     get:
@@ -86,19 +105,28 @@ paths:
         name: stockId
         required: true
         type: integer
+        format: int64
       responses:
         '200':
           description: Stock was successfully found
           schema:
-            $ref: '#/definitions/StockDTO'
+            $ref: '#/definitions/StockDetailResponse'
         '401':
-          description: You user is not Authorized
+          description: Your user is not Authorized.
+          schema:
+            $ref: '#/definitions/ErrorResponse'
         '403':
-          description: You don't have the permission on this resource
+          description: You don't have the permission on this resource.
+          schema:
+            $ref: '#/definitions/ErrorResponse'
         '404':
-          description: There is no stock for given stockId
+          description: No stock entity exists for given stockId.
+          schema:
+            $ref: '#/definitions/ErrorResponse'
         '500':
-          description: Internal Server Error
+          description: Internal Server Error.
+          schema:
+            $ref: '#/definitions/ErrorResponse'
     put:
       tags:
       - stocks
@@ -111,6 +139,7 @@ paths:
         name: stockId
         required: true
         type: integer
+        format: int64
       - in: body
         name: StockRequest
         description: Stock to create
@@ -120,17 +149,27 @@ paths:
         '200':
           description: Stock was successfully updated
           schema:
-            $ref: '#/definitions/StockDTO'
+            $ref: '#/definitions/StockDetailResponse'
         '400':
-          description: Request is not correct
+          description: Incorrect/Corrupt request.
+          schema:
+            $ref: '#/definitions/ErrorResponse'
         '401':
-          description: You user is not Authorized
+          description: Your user is not Authorized.
+          schema:
+            $ref: '#/definitions/ErrorResponse'
         '403':
-          description: You don't have the permission on this resource
+          description: You don't have the permission on this resource.
+          schema:
+            $ref: '#/definitions/ErrorResponse'
         '404':
-          description: There is no stock for given stockId
+          description: No stock entity exists for given stockId.
+          schema:
+            $ref: '#/definitions/ErrorResponse'
         '500':
-          description: Internal Server Error
+          description: Internal Server Error.
+          schema:
+            $ref: '#/definitions/ErrorResponse'
 
     delete:
       tags:
@@ -142,93 +181,122 @@ paths:
         name: stockId
         required: true
         type: integer
+        format: int64
       responses:
-        '200':
-          description: Stock was successfully deleted
-          schema:
-            $ref: '#/definitions/StockDTO'
+        '204':
+          description: Stock was successfully deleted.
         '401':
-          description: You user is not Authorized
+          description: Your user is not Authorized.
+          schema:
+            $ref: '#/definitions/ErrorResponse'
         '403':
-          description: You don't have the permission on this resource
+          description: You don't have the permission on this resource.
+          schema:
+            $ref: '#/definitions/ErrorResponse'
         '404':
-          description: There is no stock for given stockId
+          description: No stock entity exists for given stockId.
+          schema:
+            $ref: '#/definitions/ErrorResponse'
         '500':
-          description: Internal Server Error
+          description: Internal Server Error.
+          schema:
+            $ref: '#/definitions/ErrorResponse'
 
 definitions:
 
-  AbstractResponseDTO:
+  StockDetailResponse:
+    description: Describes details of a stock entity.
     properties:
-      statusCode:
+      stockId:
         type: integer
-        description: http response code
-      message:
+        format: int64
+        description: Unique identifier of a stock entity.
+        example: 98232913455
+      stockName:
         type: string
-        description: http response message
-
-  StockDTO:
-    allOf:
-    - $ref: '#/definitions/AbstractResponseDTO'
-    - properties:
-        id:
-          type: integer
-          description: unique identifier of a stock entity
-        name:
-          type: string
-          description: name of the stock
-        currentPrice:
-          type: number
-          format: double
-          description: current stockPrice
-        lastUpdated:
-          type: string
-          format: date-time
-          description: '2019-06-25T17:32:28Z'
-
-  StockListResponseDTO:
-    allOf:
-    - $ref: '#/definitions/AbstractResponseDTO'
-    - properties:
-        stocksList:
-          type: array
-          items:
-            $ref: '#/definitions/StockDTO'
-        size:
-          type: integer
-          minimum: 0
-        number:
-          type: integer
-        totalPages:
-          type: integer
-        totalElements:
-          type: integer
-          format: int64
-
-  StockRequestDTO:
-    properties:
-      name:
-        type: string
-        description: name of the stock
+        description: Name of the stock.
+        example: payconiqStock
       currentPrice:
         type: number
         format: double
-        description: current stockPrice
+        description: Current price of the stock.
+        example: 16.6
+      lastUpdated:
+        type: string
+        format: date-time
+        description: Last updated time of the stock.
+        example: '2019-06-25T17:32:28Z'
+
+  StockListResponse:
+    description: List of stocks along with page index and its size.
+    properties:
+      stocksList:
+        type: array
+        items:
+          $ref: '#/definitions/StockDetailResponse'
+      size:
+        type: integer
+        minimum: 0
+        description: current page size.
+      number:
+        type: integer
+        description: current page number.
+      totalPages:
+        type: integer
+        description: total pages.
+      totalElements:
+        type: integer
+        format: int64
+        description: total elements.
 
   CreateStockRequestDTO:
+    description: Request object to create a new stock entity.
     properties:
-      name:
+      stockName:
         type: string
-        description: name of the stock
+        description: Name of the stock.
+        example: payconiqStock
       currentPrice:
         type: number
         format: double
-        description: current stockPrice
+        description: Current price of the stock.
+        example: 16.6
     required:
-    - name
+    - stockName
     - currentPrice
 
   UpdateStockRequestDTO:
-    allOf:
-    - $ref: '#/definitions/StockRequestDTO'
+    description: Request object to update a stock entity.
+    properties:
+      currentPrice:
+        type: number
+        format: double
+        description: Current price of the stock.
+        example: 16.6
+    required:
+    - currentPrice
 
+  ErrorResponse:
+    description: Error responses description.
+    properties:
+      status:
+        description: Error code.
+        type: integer
+      error:
+        description: Error description in human readble format.
+        type: String
+      message:
+        description: Reason the error occured.
+        type: string
+        minLength: 1
+      timestamp:
+        description: Error timestamp.
+        type: string
+        format: date-time
+      path:
+        description: Path/Uri to invalid resource.
+        type: string
+    required:
+    - code
+    - message
+    - timestamp
